package Targil3;

public class BoardDecorator {

    protected Board board;

    public BoardDecorator()
    {
        this.board = new Board();
    }
}
