package Targil3;

public class Main {

    public static void main(String[] args)
    {
        System.out.println("----Welcome to Four in a Line Game----");

        Game.startGame();
    }
}