package Targil3;

public interface VirtualPlayer {
    public int MakeAChoise(char[][] board);
}