@startuml

title __ASSIGNMENT4's Class Diagram__\n

  namespace assignment4 {
    class assignment4.Board {
        {static} + COLUMNS : int
        {static} + EMPTY : char
        {static} + ROWS : int
        {static} + board : char[][]
        + Board()
        {static} + boardIsFull()
        {static} + firstEmptyRow()
        {static} + isColumnFull()
    }
  }
  

  namespace assignment4 {
    class assignment4.BoardDecorator {
        + BoardDecorator()
    }
  }
  

  namespace assignment4 {
    class assignment4.ConsoleUI {
        ~ terminalInput : Scanner
        + ConsoleUI()
        + computerPlayerTurn()
        + exit()
        + humanPlayerTurn()
        + printBoard()
        + printMenu()
        + showWinner()
    }
  }
  

  namespace assignment4 {
    class assignment4.DebugProxy {
        - obj : Object
        {static} - writer : PrintWriter
        {static} + close_inner_file()
        + invoke()
        {static} + newInstance()
        - DebugProxy()
    }
  }
  

  namespace assignment4 {
    class assignment4.DecoratedBoard {
        + backgroundNum : int
        + DecoratedBoard()
        + setBackgroundNum()
    }
  }
  

  namespace assignment4 {
    class assignment4.Game {
        {static} + EMPTY : char
        {static} + OPLAYER : char
        {static} + WIN : int
        {static} + XPLAYER : char
        {static} + board : Board
        {static} + computerplays : boolean
        {static} + currentPlayer : char
        {static} + gameover : boolean
        {static} + changePlayer()
        {static} + play()
        {static} + playerNum()
        {static} + winningDisk()
    }
  }
  

  namespace assignment4 {
    class assignment4.GameAspect {
    }
  }
  

  namespace assignment4 {
    enum GameModes {
      EASY
      MEDIUM
      STRONG
    }
  }
  

  namespace assignment4 {
    class assignment4.LogUI {
        {static} - writer : PrintWriter
        + LogUI()
        {static} + closeFile()
        + printBoard()
        - captureBoard()
    }
  }
  

  namespace assignment4 {
    class assignment4.Main {
        {static} + main()
    }
  }
  

  namespace assignment4 {
    enum MenuOptions {
      Exit
      MultiPlayer
      SinglePlayer
    }
  }
  

  namespace assignment4 {
    interface assignment4.UserInterface {
        {abstract} + computerPlayerTurn()
        {abstract} + exit()
        {abstract} + humanPlayerTurn()
        {abstract} + printBoard()
        {abstract} + printMenu()
        {abstract} + showWinner()
    }
  }
  

  namespace assignment4 {
    class assignment4.UserInterfaceDecorator {
        + UserInterfaceDecorator()
        + computerPlayerTurn()
        + exit()
        + humanPlayerTurn()
        + printBoard()
        + printMenu()
        + showWinner()
    }
  }
  

  namespace assignment4 {
    interface assignment4.VirtualPlayer {
        {abstract} + MakeAChoise()
    }
  }
  

  namespace assignment4 {
    class assignment4.VirtualPlayerEasy {
        + MakeAChoise()
    }
  }
  

  namespace assignment4 {
    class assignment4.VirtualPlayerFactory {
        {static} - virtualPlayerMap : HashMap<String, VirtualPlayer>
        + getVirtialPlayer()
    }
  }
  

  namespace assignment4 {
    class assignment4.VirtualPlayerMedium {
        + MakeAChoise()
    }
  }
  


  assignment4.ConsoleUI .up.|> assignment4.UserInterface
  assignment4.DebugProxy .up.|> java.lang.reflect.InvocationHandler
  assignment4.LogUI -up-|> assignment4.UserInterfaceDecorator
  assignment4.UserInterfaceDecorator .up.|> assignment4.UserInterface
  assignment4.UserInterfaceDecorator o-- assignment4.UserInterface : userInterfaceToBeDecorated
  assignment4.VirtualPlayerEasy .up.|> assignment4.VirtualPlayer
  assignment4.VirtualPlayerMedium .up.|> assignment4.VirtualPlayer
  assignment4.VirtualPlayer .up.|> assignment4.VirtualPlayerFactory
  assignment4.BoardDecorator o-- assignment4.Board : board
  assignment4.DecoratedBoard -up-|> assignment4.BoardDecorator
  assignment4.UserInterface .up.|> assignment4.GameModes
  assignment4.UserInterface .up.|> assignment4.MenuOptions

  assignment4.Main --> assignment4.Game
  assignment4.Game ---> assignment4.Board
  assignment4.Game -> assignment4.UserInterface
  assignment4.Game --> assignment4.VirtualPlayerFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
